<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove">Remove Selected Topics</string>
    <string name="Add"> Add Topics</string>
    <string name="cancel"> Cancel</string>
    <string name="app_name">Tutron</string>
    <string name="login_text">Welcome to Tutron! Please sign in with the form below, or register an account if you don\'t have one yet!</string>
    <string name="tutron">Tutron</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login_hint">Login...</string>
    <string name="login_btn">Login</string>
    <string name="or">Or...</string>
    <string name="register">Register</string>
    <string name="make_acct">Make your account!</string>
    <string name="confirmpwd">Confirm Password</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="logout">Logout</string>
    <string name="describe_yourself">Describe yourself!</string>
    <string name="submit">Submit</string>
    <string name="native_language">Native Language</string>
    <string name="education_level">Education Level</string>
    <string name="additional_information">Additional Information</string>
    <string name="profile_picture">Profile picture</string>
    <string name="choose_your_role">Choose your role:</string>
    <string name="exp_year">Exp Year</string>
    <string name="exp_month">Exp Month</string>
    <string name="cvv">CVV</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="address">Address</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>


    <string-array name="education_levels">
        <item>Secondary</item>
        <item>Post-Secondary Undergraduate</item>
        <item>Post-Secondary Graduate+</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>French</item>
    </string-array>
    <string name="title_activity_administrator">Administrator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_view_complaint">ViewComplaint</string>
    <string name="complaint_info">COMPLAINT INFO</string>
    <string name="complaint_description">Complaint Description:</string>
    <string name="full_name">Tutor Full Name:</string>
    <string name="dismiss">DISMISS</string>
    <string name="suspend">SUSPEND</string>
    <string name="suspend_temporary">SUSPEND (TEMPORARY)</string>
    <string name="suspend_permanent">SUSPEND (PERMANENT)</string>
    <string name="administrator">Administrator</string>
    <string name="your_tutor_profile">Your Tutor Profile:</string>
    <string name="profile_description">Profile Description:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_topics">View Topics</string>
    <string name="view_offered_topics">View Offered Topics</string>
    <string name="edit_topics_and_offered_topics">Edit Topics and Offered Topics</string>
    <string name="select_profile_topics">Select Profile Topics</string>
    <string name="select_offered_topics">Select Offered Topics</string>
    <string name="topics_editing">Topics Editing</string>
    <string name="remove_profile_topics">Remove Profile Topics</string>
    <string name="remove_offered_topics">Remove Offered Topics</string>
    <string name="add_profile_topics">Add Profile Topics</string>
    <string name="add_offered_topics">Add To Offered Topics</string>
    <string name="add_topic">Add Topic</string>
    <string name="add_topic_s"> Add Topic(s)</string>
    <string name="view_profile">View Profile</string>
    <string name="complaint">COMPLAINT INFORMATION</string>
    <string name="incoming_purchase_requests">Incoming Purchase Requests</string>
    <string name="approve_selected">Approve Selected</string>
    <string name="dismiss_selected">Dismiss Selected</string>
    <string name="incoming_purchase_requests_tap_to_view_more_details">Incoming Purchase Requests (Tap to View More Details)</string>
    <string name="hello">"Hello "</string>
    <string name="hello_there">Hello %1$s %2$s!</string>
    <string name="your_rating">Your Rating:</string>
    <string name="search_for_a_tutor">Search for a Tutor</string>
    <string name="sort_by">Sort by:</string>
    <string name="view_purchase_requests">View Purchase Requests</string>
    <string name="rate_a_tutor_submit_a_complaint">Rate a Tutor/Submit a Complaint</string>
    <string name="dashboard_studentwelcome"> Hello! \n Welcome to the Student Dashboard!</string>
    <string name="search"> Search</string>
    <string name="back">Back</string>
    <string name="search_results">Search Results</string>
    <string name="viewmore"> View More </string>
    <string name="tutor_profile">Tutor Profile:</string>
    <string name="rating">Rating:</string>
    <string name="request_a_lesson">Request a Lesson</string>
    <string name="education">Education:</string>
    <string name="title_activity_student_requests2">StudentRequests2</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>