<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#000000"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#125379"
            android:layout_marginBottom="10dp"
            android:text="@string/search_for_a_tutor"
            android:textSize="24sp" />

        <Button
            android:id="@+id/view_purchase_requests_button"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#125379"
            android:text="View Purchase Request/Rate Tutor"
            android:textSize="20sp" />
        />

        <Button
            android:id="@+id/complaint"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:backgroundTint="#125379"
            android:text="Submit a Complaint"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/student_welcome"
        android:layout_width="302dp"
        android:layout_height="100dp"
        android:text="@string/dashboard_studentwelcome"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

</androidx.constraintlayout.widget.ConstraintLayout>